--- a/Notes App/page.html
+++ b/Notes App/page.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1><img src="images/notes.png"> Notes</h1>
+        <button><img src="images/create-note.svg"> Create Notes</button>
+        <div class="note-container">
+         <!--<p contenteditable="true" class="input-box">
+                <img src="images/delete.png">
+            </p>-->
+        </div>
+    </div>
 
     <script src="code.js"></script>
 </body>
