javascrip code to handle all actions

--- a/Notes App/page.html
+++ b/Notes App/page.html
@@ -10,12 +10,13 @@
 <body>
     <div class="container">
         <h1><img src="images/notes.png"> Notes</h1>
-        <button><img src="images/create-note.svg"> Create Notes</button>
+        <button class="btn"><img src="images/create-note.svg"> Create Notes</button>
         <div class="note-container">
-         <!--<p contenteditable="true" class="input-box">
+            <!--<p contenteditable="true" class="input-box">
                 <img src="images/delete.png">
             </p>-->
         </div>
+        <button class="clear-btn">Clear All Notes</button>
     </div>
 
     <script src="code.js"></script>
