--- a/Notes App/page.html
+++ b/Notes App/page.html
@@ -16,7 +16,7 @@
                 <img src="images/delete.png">
             </p>-->
         </div>
-        <button id="clear-btn">Clear All Notes</button>
+        <button id="clear-btn"><img src="images/deleteall.png">Clear All Notes</button>
     </div>
 
     <script src="code.js"></script>
