adding JS code of post button

--- a/Quote Generator App/page.html
+++ b/Quote Generator App/page.html
@@ -14,7 +14,7 @@
         <span id="author">Loading...</span>
         <div>
             <button onclick="getQuote(apiUrl)"><img src="pngtree-quote-icon-on-white-background-picture-image_8005645.png">New Quote</button>
-            <button><img src="x-social-media-black-icon.png">Post</button>
+            <button onclick="post()"><img src="x-social-media-black-icon.png">Post</button>
         </div>
     </div>
     <script src="code.js"></script>
