--- a/QR Code Generator App/page.html
+++ b/QR Code Generator App/page.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div class="container">
-        
+        <p>Enter your text or URL</p>
+        <input type="text" placeholder="Text or URL" id="qrText">
+        <div id="imgBox">
+            <img src="" id="qrImg">
+        </div>
+        <button onclick="generateQR()">Generate QR-Code</button>
     </div>
+
+    <script src="code.js"></script>
 </body>
 </html>
