--- a/Toast Notification App/page.html
+++ b/Toast Notification App/page.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toast Notification</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/69a868ad49.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
+        <button onclick="showToast(successMsg)">Success</button>
+        <button onclick="showToast(errorMsg)">Error</button>
+        <button onclick="showToast(invalidMsg)">Invalid</button>
+    </div>
+
+    <div id="toastBox">
 
     </div>
 
